-------------------------------------------------------------------------------

$Id$

vim: spelllang=en spell

-------------------------------------------------------------------------------

Changes in 1.5.1:

* Fixed reset of allow_scanning flag if ecrt_master_activate() was not called.
* Fixed missing distribution for r8169 for 2.6.32 and e1000 driver for 2.6.31.
* Added e100 for 2.6.35, 3.4.
* Added r8169 driver for 2.6.35 (F. Pose), 2.6.36 (J. Kunz), 3.2 (J. Kunz),
  3.4 (F. Pose).
* Added e1000e driver for 2.6.35 (F. Pose), 3.2 (J. Kunz), 3.4 (F. Pose).
* Added fix for ESC port order (DC delay calculation).
* Added e1000 driver for kernels 2.6.35, 3.0, 3.4.
* Added 8139too driver for kernel 3.4.
* Avoided slave FSM datagram queue; implemented datagram ring instead.

Changes in 1.5.0:

* Added a userspace library for accessing the application interface. This
  library is licensed under LGPLv2.
* Added distributed clocks support.
* Added watchdog configuration via application interface (thanks to J. Mohre).
* Added VoE mailbox protocol support.
* Added SoE mailbox protocol support.
* Improved the callback mechanism. ecrt_master_callbacks() now takes two
  callback functions for sending and receiving datagrams.
  ecrt_master_send_ext() is used to execute the sending of non-application
  datagrams.
* Separated datagram initialization from filling the payload with zeros.
  Introduced new method ec_datagram_zero() for that.
* Added phy_read and phy_write commands to ethercat tool.
* Added e100 driver for Intel PRO/100 NICs.
    - Added e100 driver for 2.6.27.
    - Added e100 driver for 2.6.28, thanks to Kim. H. Madsen.
    - Added e100 driver for 2.6.29, thanks to Andre Puschmann.
    - Added e100 driver for 2.6.31.
    - Added e100 driver for 2.6.32.
    - Added e100 driver for 2.6.33, thanks to J. Kunz.
    - Added e100 driver for 2.6.37.
    - Added e100 driver for 3.0.
* Added 8139too driver for kernels 2.6.25 (F. Pose), 2.6.26 (M. Luescher),